# INHIBITOME-V1

./: .gitignore  Makefile  ONBOARDING.md  README.md  pyproject.toml  test
config/: pilot.yaml
docs/: 00_PROJECT_PLAN.md  01_DATA_ACCESS.md  02_PREREGISTRATION.md  03_TEN_DAY_PILOT.md  04_KILL_AND_SUCCESS.md  05_ISEF_AND_PUBLICATION.md
notebooks/: README.md
scripts/: 00_setup_cave_token.py  01_freeze_and_join.py  02_sample_accounting.py  03_functional_targets.py  04_fingerprints.py  05_blinded_comparison.py
src/inhibitome/: __init__.py  config.py
src/inhibitome/data/: __init__.py  cave.py  functional.py  join.py
src/inhibitome/fingerprints/: __init__.py  build.py
src/inhibitome/models/: __init__.py  nested.py  validation.py
src/inhibitome/nulls/: __init__.py  controls.py
src/inhibitome/phenotypes/: __init__.py  reliability.py  state_modulation.py
src/inhibitome/report/: __init__.py  sample_accounting.py
tests/: test_core_logic.py
