[project]
name = "inhibitome"
version = "0.1.0"
description = "Does inhibitory synaptic architecture predict stable and state-dependent visual computation in single MICrONS cortical neurons?"
readme = "README.md"
requires-python = ">=3.10,<3.13"  # caveclient / cloud-volume stack is most stable on 3.10-3.12
license = { text = "MIT" }

# Pinned loosely here; exact versions are locked in uv.lock once `uv sync` runs.
dependencies = [
  # --- MICrONS / connectomics data access ---
  "caveclient",          # CAVE materialization + chunkedgraph queries
  "standard-transform",  # cortical depth / layer transforms for minnie65
  "cloud-volume",        # meshes / imagery (only if needed for QC)
  "nglui",               # neuroglancer link building for figures/QC
  # --- scientific stack ---
  "numpy",
  "pandas",
  "pyarrow",             # parquet I/O for the master table
  "scipy",
  "scikit-learn",
  "statsmodels",         # mixed-effects / clustered inference
  "pygam",               # generalized additive models (Aim 3 GAM tier)
  "lightgbm",            # gradient-boosted trees (nonlinear control)
  # --- viz / reporting ---
  "matplotlib",
  "seaborn",
  "tqdm",
  "pyyaml",
]

[project.optional-dependencies]
dev = [
  "jupyterlab",
  "ruff",
  "pytest",
  "ipykernel",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/inhibitome"]
